List the Dropdown Menu

--- a/content/modern/overtime.html
+++ b/content/modern/overtime.html
@@ -15,10 +15,12 @@
             <input type="checkbox" id="menu">
             <label for="menu">Info</label>
             <div class="menu-content">
-              <p>Words: 5,521</p>
-              <p>Male/Male (Trans)</p>
-              <p>Modern</p>
-              <p>Setting: Draconic Solutions</p>
+              <ul>
+              <li>Words: 5,521</li>
+              <li>Male/Male (Trans)</li>
+              <li>Modern</li>
+              <li>Setting: Draconic Solutions</li>
+              </ul>
             </div>
         </div>
     </div>
@@ -28,11 +30,8 @@
   <p>Though his eyes remained obstinately glued to the screen, one of his large ears nonetheless found itself swiveling in the direction of approaching footsteps. At first, he thought it might be one of the maintenance people. Then, he heard the sub-vocal humming of one of Shred Burrow's many, many deep-cut songs, and sighed. "I thought you went home, already."</p>
   <p>The footsteps came to a stop, replaced by the sound of something heavy leaning against the outer wall of his cubicle, before a deep voice responded. "My car's acting up again, and my backup ride is apparently gonna be a bit."</p>
   <p>"Lemme guess," Roger quipped. "Your sister is <em>also</em> having car trouble."</p>
-
   <p>"Yeah, yeah, I know. I swear, sometimes it seems like my whole family was, like, cursed by a car witch or something."</p>
-
   <p>Roger closed his eyes and shook his head, before finally turning around. There had never been anything about Ian's appearance that had left Roger surprised, when the latter had had time to learn what he was really like. Everything from the tactically messy patch of fur on the cat's head to his tendency to come to work in sneakers and without fully buttoning his wrinkled shirts, his crooked smirk, the bounce in his step so uncharacteristic of the realities of office life... it all spoke of somebody who could barely manage to keep themselves together. It didn't help that he spent half of his time in the office pretending as though it were his own personal clubhouse. Getting all chummy with anyone he had a fancy for, that day. Barely respecting personal boundaries. Honestly, sometimes it felt like he deliberately chose shirts that were a size too small, so he could show off the set of muscles he always bragged about working on...</p>
-
   <p>Roger blinked, shaking off the thought. "If you're going to ask me for a ride, I'm afraid you might be a bit."<p>
 
   <p>"Nah," Ian rested his chin against his elbow, as he leaned further against the little divider. "I wouldn't wanna get in your way, Boss. Not when you're in Serious Mode, and all."</p>
