Add Dropdown Thing

--- a/content/modern/profbehv.html
+++ b/content/modern/profbehv.html
@@ -10,6 +10,23 @@
   <body>
   <header>
     <div class="page">
+    <h1>Professional Behavior</h1>
+        <div class="infobox">
+            <input type="checkbox" id="menu">
+            <label for="menu">Info</label>
+            <div class="menu-content">
+              <ul>
+              <li>Words: 5,458</li>
+              <li>Male/Female (Trans)</li>
+              <li>Male (Trans) Solo</li>
+              <li>Modern</li>
+              <li>Setting: Draconic Solutions</li>
+              </ul>
+            </div>
+        </div>
+    </div>
+  </header>
+    <div class="page">
 
       Carol was a small lady. Even under normal circumstances, she only ever came up to Roger's shoulder. However, in this moment, she seemed to be doing everything in her power to seem smaller. The way she crunched herself into a vaguely mouse-shaped ball, in her chair, it looked for all the world like she was trying to disappear into a singularity. Roger knew the best thing for this was to give her a moment, to let the nearly palpable heat dissipate from her cheeks and for her fingers to unclamp around the fabric of her pencil skirt. Eventually, she would speak.
 
