--- a/content/modern/overtime.html
+++ b/content/modern/overtime.html
@@ -9,6 +9,24 @@
   <link rel="stylesheet" type="text/css" href="modernstyle.css">
   <body>
   <header>
+    <h1 class="center">The Finchy Omnibus</h1>
+      <ul class="nav">
+        <li>
+          <a href="https://finchington.github.io/landing-page.html">Home</a>
+        </li>
+        <li>
+          <a href="#">Genres</a>
+        </li>
+        <li>
+          <a href="#">Relationships</a>
+        </li>
+        <li>
+          <a href="#">Fanfiction</a>
+        </li>
+        <li>
+          <a href="#">Shameless Plugs</a>
+        </li>
+      </ul>
     <div class="page">
     <h1>Overtime</h1>
         <div class="infobox">
