--- a/content/modern/overtime.html
+++ b/content/modern/overtime.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en>
   <head>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="modernstyle.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Overtime, a Short Story by Finch</title>
