--- a/content/modern/overtime.html
+++ b/content/modern/overtime.html
@@ -7,12 +7,18 @@
     <title>Overtime, a Short Story by Finch</title>
   </head>
   <body>
-  <header>
+  <head>
+    <link rel="stylesheet" type:"text:css" href="styles.css"
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+  <body>
     <div class="page">
+  <header>
     <h1 class="center">The Finchy Omnibus</h1>
       <ul class="nav">
         <li>
-          <a href="https://finchington.github.io/landing-page.html">Home</a>
+          <a href="https://finchington.github.io/index/html">Home</a>
         </li>
         <li>
           <a href="#">Genres</a>
