Start the paragraphing

--- a/content/modern/profbehv.html
+++ b/content/modern/profbehv.html
@@ -28,9 +28,9 @@
   </header>
     <div class="page">
 
-      Carol was a small lady. Even under normal circumstances, she only ever came up to Roger's shoulder. However, in this moment, she seemed to be doing everything in her power to seem smaller. The way she crunched herself into a vaguely mouse-shaped ball, in her chair, it looked for all the world like she was trying to disappear into a singularity. Roger knew the best thing for this was to give her a moment, to let the nearly palpable heat dissipate from her cheeks and for her fingers to unclamp around the fabric of her pencil skirt. Eventually, she would speak.
+<p>Carol was a small lady. Even under normal circumstances, she only ever came up to Roger's shoulder. However, in this moment, she seemed to be doing everything in her power to seem smaller. The way she crunched herself into a vaguely mouse-shaped ball, in her chair, it looked for all the world like she was trying to disappear into a singularity. Roger knew the best thing for this was to give her a moment, to let the nearly palpable heat dissipate from her cheeks and for her fingers to unclamp around the fabric of her pencil skirt. Eventually, she would speak.</p>
 
-"I... see," she whispered, barely audible even to Roger's sensitive rabbit ears.
+<p>"I... see," she whispered, barely audible even to Roger's sensitive rabbit ears.</p>
 
 Roger sighed, putting his papers down on the conference table, next to them, and resumed speaking. "Like I said, you're not in any kind of trouble. Not from me, anyway. I'm more than happy to pretend like I never had any reason to learn about you and Shirl."
 
