--- a/content/modern/profbehv.html
+++ b/content/modern/profbehv.html
@@ -32,43 +32,43 @@
 
 <p>"I... see," she whispered, barely audible even to Roger's sensitive rabbit ears.</p>
 
-Roger sighed, putting his papers down on the conference table, next to them, and resumed speaking. "Like I said, you're not in any kind of trouble. Not from me, anyway. I'm more than happy to pretend like I never had any reason to learn about you and Shirl."
+<p>Roger sighed, putting his papers down on the conference table, next to them, and resumed speaking. "Like I said, you're not in any kind of trouble. Not from me, anyway. I'm more than happy to pretend like I never had any reason to learn about you and Shirl."</p>
 
-"R-right..." She had the vaguest sense of relief, under the multiple layers of sheer mortification that painted her down-turned face.
+<p>"R-right..." She had the vaguest sense of relief, under the multiple layers of sheer mortification that painted her down-turned face.</p>
 
-"I just... need you two to be careful, all right? I'm not the only person who knows about this, and the only reason it's you and me having this conversation is because nobody's gone to HR." Roger paused for a second, to let Carol make the noises of a woman dying of embarrassment into her hands. At no point had the two of them found the strength of will to meet each other's eyes, during this meeting. Not in light of what they knew of each other. Roger rolled a pen along his fingers, distractedly. "I'm happy for you two. Really, I am. But, if it gets upstairs, and they have to ask me why I didn't report it, it's gonna be all three of us, on the chopping block. So, please? As a favor for me, just... keep the unprofessional behavior to a low roar, when you're on the clock."
+<p>"I just... need you two to be careful, all right? I'm not the only person who knows about this, and the only reason it's you and me having this conversation is because nobody's gone to HR." Roger paused for a second, to let Carol make the noises of a woman dying of embarrassment into her hands. At no point had the two of them found the strength of will to meet each other's eyes, during this meeting. Not in light of what they knew of each other. Roger rolled a pen along his fingers, distractedly. "I'm happy for you two. Really, I am. But, if it gets upstairs, and they have to ask me why I didn't report it, it's gonna be all <i>three</i> of us, on the chopping block. So, please? As a favor for me, just... keep the unprofessional behavior to a low roar, when you're on the clock."</p>
 
-"Y-yes, Boss," Carol whispered, at the floor.
+<p>"Y-yes, Boss," Carol whispered, at the floor.</p>
 
-Roger leaned forward. "Car? Look at me." The two stared into each other's eyes, for a moment. Roger was already regretting this decision, but he proceeded, anyway. "I don't have the glasses on, right now. I'm not talking to you as your manager. Right now it's just your friend from work, and he's trying to look out for you."
+<p>Roger leaned forward. "Car? Look at me." The two stared into each other's eyes, for a moment. Roger was already regretting this decision, but he proceeded, anyway. "I don't have the glasses on, right now. I'm not talking to you as your manager. Right now it's just your friend from work, and he's trying to look out for you."</p>
 
-Carol nodded, her face still burning.
+<p>Carol nodded, her face still burning.</p>
 
-"Okay. Now, I want you to take a moment to hit the ladies' room. Take however long you need, but when you get back to your desk, it's business as usual. If anyone asks me, I've pulled you in here for a routine status update on the patch." Leaning back, he reached for his papers, again. "You and Shirl were a bit behind, and you are, still. Luckily, it seems like some of the more tedious programming took care of itself, overnight."
+<p>"Okay. Now, I want you to take a moment to hit the ladies' room. Take however long you need, but when you get back to your desk, it's business as usual. If anyone asks me, I've pulled you in here for a routine status update on the patch." Leaning back, he reached for his papers, again. "You and Shirl were a bit behind, and you are, still. Luckily, it seems like some of the more tedious programming took care of itself, overnight."</p>
 
-"What?" Carol blinked. "You... th-thank you, for that."
+<p>"What?" Carol blinked. "You... th-thank you, for that."</p>
 
-Roger laughed, mirthlessly. "Trust me, you're not going to thank me, once you've seen how out of shape I've gotten in the language. There's no telling how many bugs I've managed to introduce into your work." Shaking his head, he stared at his empty coffee cup with chagrin. "Let Shirl know it's her turn, on your way out, okay?"
+<p>Roger laughed, mirthlessly. "Trust me, you're not going to thank me, once you've seen how out of shape I've gotten in the language. There's no telling how many bugs I've managed to introduce into your work." Shaking his head, he stared at his empty coffee cup with chagrin. "Let Shirl know it's her turn, on your way out, okay?"</p>
 
-He had a few minutes to prepare himself, before having to deal with his other coder. He originally had only figured he had a few moments, but Shirl seemed to take her time answering the summons. Perhaps she had unwisely decided to speak with Carol about the meeting. Perhaps she decided to deliberately make him wait. It wouldn't have been the first time she had decided to mess around on her phone, when she was supposed to be coming in for a status update. His hand drifted to the glasses case in his pocket, but he did not remove it. He was going to try and get through today, without having to actually be the Boss. He wasn't sure why, but by God, he was going to try.
+<p>He had a few minutes to prepare himself, before having to deal with his other coder. He originally had only figured he had a few moments, but Shirl seemed to take her time answering the summons. Perhaps she had unwisely decided to speak with Carol about the meeting. Perhaps she decided to deliberately make him wait. It wouldn't have been the first time she had decided to mess around on her phone, when she was supposed to be coming in for a status update. His hand drifted to the glasses case in his pocket, but he did not remove them. He was going to try and get through today, without having to actually be the Boss. He wasn't sure why, but by God, he was going to try.</p>
 
-Right around the time he was pondering the logistics of grabbing another shot of vital caffeine, Shirl arrived. She was unbelievably hard to miss. Kissing seven foot tall, with a natural set of curves that tried and failed to hide the body of a natural predator, she was the kind of wolf that Shred Burrow would write fawning and intimidating songs over. And she absolutely knew it. Everything from her slightly too tight pantsuit, to her slightly too strongly applied perfume, to the way too overbearing choice of lipstick and eyeliner (apple green, today. Classy), was the textbook definition of try-hard behavior. At least, it would, were it not for the fact that it often succeeded.
+<p>Right around the time he was pondering the logistics of grabbing another shot of vital caffeine, Shirl arrived. She was unbelievably hard to miss. Kissing seven foot tall, with a natural set of curves that tried and failed to hide the body of a natural predator, she was the kind of wolf that Shred Burrow would write fawning and intimidating songs over. And she absolutely knew it. Everything from her slightly too tight pantsuit, to her slightly too strongly applied perfume, to the way too overbearing choice of lipstick and eyeliner (apple green, today. Classy), was the textbook definition of try-hard behavior. At least, it would, were it not for the fact that it often succeeded.</p>
 
-"Good morning," Roger chirped, managing against all odds to feign a chipper attitude. "Got some business we need to discuss, so go ahead and have a seat."
+<p>"Good morning," Roger chirped, managing against all odds to feign a chipper attitude. "Got some business we need to discuss, so go ahead and have a seat."</p>
 
-"Yeah, yeah," Shirl replied, dumping herself into the chair with enough force to make it roll back and squeal in protest. "We both know what this is about, so let's just get past the Boss speak, all right?" She grinned, showing off her polished fangs as she spoke. "Spoken to Ian, yet, by the way? Think he was meaning to tell you something."
+<p>"Yeah, yeah," Shirl replied, dumping herself into the chair with enough force to make it roll back and squeal in protest. "We both know what this is about, so let's just get past the Boss speak, all right?" She grinned, showing off her polished fangs as she spoke. "Spoken to Ian, yet, by the way? Think he was meaning to tell you something."</p>
 
-Roger's eye twitched, but he otherwise refused to take the bait. "Yes, well, I'm actually trying to avoid the Boss speak, here, so if you would kindly..."
+<p>Roger's eye twitched, but he otherwise refused to take the bait. "Yes, well, I'm actually trying to <i>avoid</i> the Boss speak, here, so if you would kindly..."</p>
 
-"You fucked him, didn't you?"
+<p>"You fucked him, didn't you?"</p>
 
-"Shirl?" Roger closed his eyes, hand trailing to his breast pocket. "I would really appreciate, like, two minutes of professionalism, here."
+<p>"Shirl?" Roger closed his eyes, hand trailing to his breast pocket. "I would really appreciate, like, two minutes of professionalism, here."</p>
 
-"I knew it!" Shirl leaned forward, beaming conspiratorially. "How was he, huh? All talk, I bet. The way he hits on people, you'd think he barely knows his way around second base."
+<p>"I knew it!" Shirl leaned forward, beaming conspiratorially. "How was he, huh? All talk, I bet. The way he hits on people, you'd think he barely knows his way around second base."</p>
 
-"Yeah, okay," Roger muttered to himself. The situation was clearly out of his control, right now. Another second and his face was going to burst into flames. He didn't want to have to do this. He promised himself he wouldn't for Carol's sake, but... reaching into his pocket, he pulled out his glasses, donned them, and glared up at the wolf. "All right, listen here, you walking harassment lawsuit."
+<p>"Yeah, okay," Roger muttered to himself. The situation was clearly out of his control, right now. Another second and his face was going to burst into flames. He didn't want to have to do this. He promised himself he wouldn't for Carol's sake, but... reaching into his pocket, he pulled out his glasses, donned them, and glared up at the wolf. "All right, listen here, you walking harassment lawsuit."</p>
 
-Shirl recoiled, a bit, though a laugh tumbled out of her throat in the same movement. "Never been called that, before."
+<p>Shirl recoiled, a bit, though a laugh tumbled out of her throat in the same movement. "Never been called <i>that,</i> before."</p>
 
 Reaching into his pile of papers, he slapped a report down on the table, next to them. "This is the report I wrote up two weeks ago, when you and Carol first decided to take an impromptu break in the janitor's closet."
 
